feat: Add Roles Management drawers in Spaces Settings - MEED-7490 - Meeds-io/MIPs#147 (#4036)
This change will allow to request and search for spaces and users using
the `SpaceMembershipsRest` endpoint (Apreparation to replace an existing
endpoint in `SpaceRest`).
In addition, in frontend side, multiple drawers has been added and rules
to rework the space memberships management which will be removed from
`Members` portlet.