@@ -17,10 +17,16 @@
 
 package org.exoplatform.social.core.jpa.storage;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
-
-import jakarta.persistence.Tuple;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -35,12 +41,15 @@ import org.exoplatform.social.core.identity.model.Profile;
 import org.exoplatform.social.core.identity.provider.OrganizationIdentityProvider;
 import org.exoplatform.social.core.identity.provider.SpaceIdentityProvider;
 import org.exoplatform.social.core.jpa.search.XSpaceFilter;
-import org.exoplatform.social.core.jpa.storage.dao.*;
+import org.exoplatform.social.core.jpa.storage.dao.ActivityDAO;
+import org.exoplatform.social.core.jpa.storage.dao.IdentityDAO;
+import org.exoplatform.social.core.jpa.storage.dao.SpaceDAO;
+import org.exoplatform.social.core.jpa.storage.dao.SpaceExternalInvitationDAO;
+import org.exoplatform.social.core.jpa.storage.dao.SpaceMemberDAO;
 import org.exoplatform.social.core.jpa.storage.dao.jpa.query.SpaceQueryBuilder;
 import org.exoplatform.social.core.jpa.storage.entity.SpaceEntity;
 import org.exoplatform.social.core.jpa.storage.entity.SpaceExternalInvitationEntity;
 import org.exoplatform.social.core.jpa.storage.entity.SpaceMemberEntity;
-import org.exoplatform.social.core.jpa.storage.entity.SpaceMemberEntity.Status;
 import org.exoplatform.social.core.model.SpaceExternalInvitation;
 import org.exoplatform.social.core.service.LinkProvider;
 import org.exoplatform.social.core.space.SpaceFilter;
@@ -52,6 +61,10 @@ import org.exoplatform.social.metadata.favorite.FavoriteService;
 import org.exoplatform.social.metadata.model.MetadataItem;
 import org.exoplatform.web.security.Token;
 import org.exoplatform.web.security.security.RemindPasswordTokenService;
+
+import io.meeds.social.space.constant.SpaceMembershipStatus;
+
+import jakarta.persistence.Tuple;
 
 public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
@@ -121,12 +134,12 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getAccessibleSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-    return getSpaces(userId, Arrays.asList(Status.MANAGER, Status.MEMBER), spaceFilter, offset, limit);
+    return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.MANAGER, SpaceMembershipStatus.MEMBER), spaceFilter, offset, limit);
   }
 
   @Override
   public int getAccessibleSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.MANAGER, Status.MEMBER), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.MANAGER, SpaceMembershipStatus.MEMBER), spaceFilter);
   }
 
   @Override
@@ -161,12 +174,12 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getEditableSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-    return getSpaces(userId, Arrays.asList(Status.MANAGER), spaceFilter, offset, limit);
+    return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.MANAGER), spaceFilter, offset, limit);
   }
 
   @Override
   public int getEditableSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.MANAGER), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.MANAGER), spaceFilter);
   }
 
   @Override
@@ -186,12 +199,12 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getInvitedSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-    return getSpaces(userId, Arrays.asList(Status.INVITED), spaceFilter, offset, limit);
+    return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.INVITED), spaceFilter, offset, limit);
   }
 
   @Override
   public int getInvitedSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.INVITED), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.INVITED), spaceFilter);
   }
 
   @Override
@@ -204,7 +217,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     XSpaceFilter xFilter = new XSpaceFilter();
     xFilter.setSpaceFilter(spaceFilter);
     xFilter.setLastAccess(true);
-    return getSpaces(spaceFilter.getRemoteId(), Arrays.asList(Status.MEMBER), xFilter, offset, limit);
+    return getSpaces(spaceFilter.getRemoteId(), Arrays.asList(SpaceMembershipStatus.MEMBER), xFilter, offset, limit);
   }
 
   @Override
@@ -225,7 +238,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getManagerSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-  return getSpaces(userId, Arrays.asList(Status.MANAGER), spaceFilter, offset, limit);
+  return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.MANAGER), spaceFilter, offset, limit);
   }
 
   @Override
@@ -235,13 +248,12 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public int getManagerSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.MANAGER), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.MANAGER), spaceFilter);
   }
   
   @Override
   public List<String> getSpaceIdentityIdsByUserRole(String remoteId, String status, int offset, int limit) {
-
-    SpaceMemberEntity.Status spaceMemberStatus = SpaceMemberEntity.Status.valueOf(status.toUpperCase());
+    SpaceMembershipStatus spaceMemberStatus = SpaceMembershipStatus.valueOf(status.toUpperCase());
     List<Long> spaceIdentityIds = spaceMemberDAO.getSpaceIdentityIdsByUserRole(remoteId, spaceMemberStatus, offset, limit);
 
     List<String> ids = new LinkedList<>();
@@ -302,7 +314,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
                                             int offset,
                                             int limit) throws SpaceStorageException {
     Identity identity = identityStorage.findIdentityById(identityId);
-    List<Long> spaceIds = spaceMemberDAO.getSpaceIdsByUserRole(identity.getRemoteId(), Status.MANAGER, offset, limit);
+    List<Long> spaceIds = spaceMemberDAO.getSpaceIdsByUserRole(identity.getRemoteId(), SpaceMembershipStatus.MANAGER, offset, limit);
 
     List<String> ids = new LinkedList<>();
     if (spaceIds != null && !spaceIds.isEmpty()) {
@@ -325,7 +337,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getMemberSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-    return getSpaces(userId, Arrays.asList(Status.MEMBER), spaceFilter, offset, limit);
+    return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.MEMBER), spaceFilter, offset, limit);
   }
   
   @Override
@@ -344,7 +356,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public int getMemberSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.MEMBER), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.MEMBER), spaceFilter);
   }
 
   @Override
@@ -356,7 +368,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
   public int getNumberOfMemberPublicSpaces(String userId) {
     XSpaceFilter filter = new XSpaceFilter();
     filter.setNotHidden(true);
-    return getSpacesCount(userId, Arrays.asList(Status.MEMBER), filter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.MEMBER), filter);
   }
 
   @Override
@@ -371,12 +383,12 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public List<Space> getPendingSpacesByFilter(String userId, SpaceFilter spaceFilter, long offset, long limit) {
-    return getSpaces(userId, Arrays.asList(Status.PENDING), spaceFilter, offset, limit);
+    return getSpaces(userId, Arrays.asList(SpaceMembershipStatus.PENDING), spaceFilter, offset, limit);
   }
 
   @Override
   public int getPendingSpacesByFilterCount(String userId, SpaceFilter spaceFilter) {
-    return getSpacesCount(userId, Arrays.asList(Status.PENDING), spaceFilter);
+    return getSpacesCount(userId, Arrays.asList(SpaceMembershipStatus.PENDING), spaceFilter);
   }
 
   @Override
@@ -506,7 +518,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     XSpaceFilter xFilter = new XSpaceFilter();
     xFilter.setSpaceFilter(spaceFilter);
     xFilter.setRemoteId(userId);
-    xFilter.addStatus(Status.MEMBER, Status.MANAGER, Status.INVITED);
+    xFilter.addStatus(SpaceMembershipStatus.MEMBER, SpaceMembershipStatus.MANAGER, SpaceMembershipStatus.INVITED);
     xFilter.setIncludePrivate(true);
     return getSpacesByFilter(xFilter, offset, limit);
   }
@@ -516,7 +528,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     XSpaceFilter xFilter = new XSpaceFilter();
     xFilter.setSpaceFilter(spaceFilter);
     xFilter.setRemoteId(userId);
-    xFilter.addStatus(Status.MEMBER, Status.MANAGER, Status.INVITED);
+    xFilter.addStatus(SpaceMembershipStatus.MEMBER, SpaceMembershipStatus.MANAGER, SpaceMembershipStatus.INVITED);
     xFilter.setIncludePrivate(true);
     return getSpacesCount(userId, null, xFilter);
   }
@@ -526,7 +538,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     XSpaceFilter xFilter = new XSpaceFilter();
     xFilter.setSpaceFilter(spaceFilter);
     xFilter.setVisited(true);
-    return getSpaces(spaceFilter.getRemoteId(), Arrays.asList(Status.MEMBER), xFilter, offset, limit);
+    return getSpaces(spaceFilter.getRemoteId(), Arrays.asList(SpaceMembershipStatus.MEMBER), xFilter, offset, limit);
   }
 
   @Override
@@ -566,7 +578,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
       entity = new SpaceMemberEntity();
       entity.setSpace(spaceEntity);
       entity.setUserId(userId);
-      entity.setStatus(Status.IGNORED);
+      entity.setStatus(SpaceMembershipStatus.IGNORED);
       spaceMemberDAO.create(entity);
     } else {
       spaceMemberDAO.delete(entity);
@@ -575,7 +587,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
 
   @Override
   public boolean isSpaceIgnored(String spaceId, String userId) {
-    SpaceMemberEntity entity = spaceMemberDAO.getSpaceMemberShip(userId, Long.parseLong(spaceId), Status.IGNORED);
+    SpaceMemberEntity entity = spaceMemberDAO.getSpaceMemberShip(userId, Long.parseLong(spaceId), SpaceMembershipStatus.IGNORED);
     return entity != null;
   }
 
@@ -610,7 +622,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
   @Override
   @ExoTransactional
   public void updateSpaceAccessed(String remoteId, Space space) {
-    SpaceMemberEntity member = spaceMemberDAO.getSpaceMemberShip(remoteId, Long.parseLong(space.getId()), Status.MEMBER);
+    SpaceMemberEntity member = spaceMemberDAO.getSpaceMemberShip(remoteId, Long.parseLong(space.getId()), SpaceMembershipStatus.MEMBER);
     if (member != null) {
       member.setVisited(true);
       member.setLastAccess(new Date());
@@ -675,7 +687,7 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     spaceExternalInvitationDAO.deleteExternalUserInvitations(email);
   }
 
-  private String[] getSpaceMembers(long spaceId, SpaceMemberEntity.Status status) {
+  private String[] getSpaceMembers(long spaceId, SpaceMembershipStatus status) {
     int countSpaceMembers = spaceMemberDAO.countSpaceMembers(spaceId, status);
     if (countSpaceMembers == 0) {
       return new String[0];
@@ -712,14 +724,14 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     Space space = new Space();
     fillSpaceSimpleFromEntity(entity, space);
 
-    space.setPendingUsers(getSpaceMembers(entity.getId(), Status.PENDING));
-    space.setInvitedUsers(getSpaceMembers(entity.getId(), Status.INVITED));
+    space.setPendingUsers(getSpaceMembers(entity.getId(), SpaceMembershipStatus.PENDING));
+    space.setInvitedUsers(getSpaceMembers(entity.getId(), SpaceMembershipStatus.INVITED));
 
     //
-    String[] members = getSpaceMembers(entity.getId(), Status.MEMBER);
-    String[] redactors = getSpaceMembers(entity.getId(), Status.REDACTOR);
-    String[] publishers = getSpaceMembers(entity.getId(), Status.PUBLISHER);
-    String[] managers = getSpaceMembers(entity.getId(), Status.MANAGER);
+    String[] members = getSpaceMembers(entity.getId(), SpaceMembershipStatus.MEMBER);
+    String[] redactors = getSpaceMembers(entity.getId(), SpaceMembershipStatus.REDACTOR);
+    String[] publishers = getSpaceMembers(entity.getId(), SpaceMembershipStatus.PUBLISHER);
+    String[] managers = getSpaceMembers(entity.getId(), SpaceMembershipStatus.MANAGER);
 
     //
     Set<String> membersList = new HashSet<String>();
@@ -737,13 +749,13 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
     return space;
   }
 
-  private List<Space> getSpaces(String userId, List<Status> status, SpaceFilter spaceFilter, long offset, long limit) {
+  private List<Space> getSpaces(String userId, List<SpaceMembershipStatus> status, SpaceFilter spaceFilter, long offset, long limit) {
     XSpaceFilter filter = new XSpaceFilter();
     filter.setSpaceFilter(spaceFilter);
     if (userId != null) {
       filter.setRemoteId(userId);
       if (status != null) {
-        filter.addStatus(status.toArray(new Status[status.size()]));
+        filter.addStatus(status.toArray(new SpaceMembershipStatus[status.size()]));
       }
     }
 
@@ -765,19 +777,19 @@ public class RDBMSSpaceStorageImpl implements SpaceStorage {
       } else {
         List<Long> ids = entities.stream()
                                  .map(tuple -> tuple.get(0, Long.class))
-                                 .collect(Collectors.toList());
+                                 .toList();
         return buildList(ids);
       }
     }
   }
 
-  private int getSpacesCount(String userId, List<Status> status, SpaceFilter spaceFilter) {
+  private int getSpacesCount(String userId, List<SpaceMembershipStatus> status, SpaceFilter spaceFilter) {
     XSpaceFilter filter = new XSpaceFilter();
     filter.setSpaceFilter(spaceFilter);
     if (userId != null) {
       filter.setRemoteId(userId);
       if (status != null) {
-        filter.addStatus(status.toArray(new Status[status.size()]));
+        filter.addStatus(status.toArray(new SpaceMembershipStatus[status.size()]));
       }
     }
 
